2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* libgnomeui/gnome-icon-list.c: (gnome_icon_list_select_all):
	* libgnomeui/gnome-icon-list.h:
	Add gnome_icon_list_select_all.
	(#138553, Laurent Sansonetti)
	
2004-05-02  Fernando Herrera  <fherrera@onirica.com>
 
 	* libgnomeui/gnome-thumbnail.c:
 	(gnome_thumbnail_factory_generate_thumbnail): 
	Use g_file_open_tmp. Fix #133927
 
2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* libgnomeui/gnome-authentication-manager.c:
	(construct_full_password_dialog):
	Make message work better for RTL languages.
	(#129254, Christian Rose)
	
2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* libgnomeui/gnome-href.c: (gnome_href_clicked):
	Use gnome_url_show_on_screen.
	(#111923, Leena Gunda)
	
2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* libgnomeui/gnome-thumbnail.c: (gnome_thumbnail_has_uri),
	(gnome_thumbnail_is_valid):
	Handle invalid values from gdk_pixbuf_get_option.
	(#141044, Torsten Schoenfeld)
	
2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* configure.in:
	* doc/reference/Makefile.am:
	* doc/reference/libgnomeui-docs.sgml:
	* doc/reference/version.xml.in:
	Put version number in reference docs.
	(#125759, Steve Chaplin)

=================== 2.6.1.1 ===================

2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Fix soname, depend on gtk+ 2.4.1
	and release 2.6.1.1

	* file-chooser/gtkfilesystemgnomevfs.c 
	(gtk_file_system_gnome_vfs_volume_render_icon): It's
	gnome-dev-harddisk, not gnome-harddisk.

2004-04-21  Federico Mena Quintero  <federico@ximian.com>

	* file-chooser/gtkfilesystemgnomevfs.c
	(gtk_file_system_gnome_vfs_get_folder): Check that the URI exists
	before creating the folder structure.  Fixes #140095.

==================== 2.6.1 ====================

2004-04-20  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Version 2.6.1 "Magmoor"

	* NEWS: Update

2004-04-16  Alexander Larsson  <alexl@redhat.com>
